--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "jade": "^1.11.0",
-    "mongoose": "^4.9.9"
+    "mongoose": "^4.9.9",
+    "socket.io": "^2.0.1"
   }
 }
